--- a/Data.ipynb
+++ b/Data.ipynb
@@ -1365,7 +1365,7 @@
     }
    ],
    "source": [
-    "triha0=df0['Trihalomethanes'].median()\n",
+    "triha0=df0['Trihalomethanes'].mean()\n",
     "triha0"
    ]
   },
