ipynb file changing

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -1350,16 +1350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "66.20611636051328"
+       "66.49155126582386"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2552,7 +2552,7 @@
     }
    ],
    "source": [
-    "dframe[dframe.columns].mean() #dframe columns nitelik isimlerini donduruyo"
+    "dframe[dframe.columns].mean()"
    ]
   },
   {
@@ -2624,7 +2624,7 @@
     }
    ],
    "source": [
-    "for column in dframe.columns: #pd de mode fonks yoktu diye kednim st kutuphanesiyle aldım.\n",
+    "for column in dframe.columns:\n",
     "    print(column,\" \\t \\t \", st.mode(dframe[column]))"
    ]
   },
@@ -2657,7 +2657,6 @@
    "source": [
     "df0['ph_category'] = df0['ph'].apply(lambda x: 'Asidik' if x < 7 else ('Bazik' if x > 7 else 'Nötr'))\n",
     "\n",
-    "# Sonucu gösterme\n",
     "print(df0[['ph', 'ph_category']])"
    ]
   },
@@ -4063,15 +4062,12 @@
    "source": [
     "from catboost import CatBoostClassifier\n",
     "\n",
-    "# CatBoost modelini eğitelim\n",
     "cat_model = CatBoostClassifier(verbose=0)\n",
     "cat_model.fit(X_train, y_train)\n",
     "\n",
-    "# Tahminler yapalım\n",
     "y_pred_cat = cat_model.predict(X_test)\n",
     "train_pred_cat = cat_model.predict(X_train)\n",
     "\n",
-    "# Modelin doğruluk skorunu alalım\n",
     "print(\"CatBoost Accuracy:\", accuracy_score(y_test, y_pred_cat))\n",
     "print(\"CatBoost Train Accuracy:\", accuracy_score(y_train, train_pred_cat))\n",
     "print(\"Classification Report:\\n\", classification_report(y_test, y_pred_cat))\n",
@@ -4105,14 +4101,11 @@
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
-    "# AdaBoost modelini eğitme\n",
     "ab_model = AdaBoostClassifier(random_state=42)\n",
     "ab_model.fit(X_train, y_train)\n",
     "\n",
-    "# Tahmin yapma\n",
     "ab_y_pred = ab_model.predict(X_test)\n",
     "\n",
-    "# Model değerlendirme\n",
     "print(\"AdaBoost Accuracy:\", accuracy_score(y_test, ab_y_pred))\n",
     "print(\"AdaBoost Classification Report:\\n\", classification_report(y_test, ab_y_pred))"
    ]
